var searchData=
[
  ['parallel_5fcheapest_5finsertion_5379',['PARALLEL_CHEAPEST_INSERTION',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#a508000956c8c98258d146e641df6db1c',1,'operations_research::PROTOBUF_FINAL']]],
  ['path_5fcheapest_5farc_5380',['PATH_CHEAPEST_ARC',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#a21def89a70be5a4f66829cf3d90d30a9',1,'operations_research::PROTOBUF_FINAL']]],
  ['path_5fmost_5fconstrained_5farc_5381',['PATH_MOST_CONSTRAINED_ARC',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#a09ed3b036c8fe310221c6c3cf73bb1eb',1,'operations_research::PROTOBUF_FINAL']]],
  ['penalty_5fevaluator_5f_5382',['penalty_evaluator_',['../classoperations__research_1_1_cheapest_insertion_filtered_heuristic.html#a2b48bfb0d3df32b08dbe0aab5a251f8b',1,'operations_research::CheapestInsertionFilteredHeuristic']]],
  ['persistent_5fimpact_5383',['persistent_impact',['../structoperations__research_1_1_default_phase_parameters.html#aa05a3321d74475f1238d0c51b5754d7e',1,'operations_research::DefaultPhaseParameters']]],
  ['position_5fof_5flast_5ftype_5fon_5fvehicle_5fup_5fto_5fvisit_5384',['position_of_last_type_on_vehicle_up_to_visit',['../structoperations__research_1_1_type_regulations_checker_1_1_type_policy_occurrence.html#a7acae15ab204f3f24e65ad1d10729bb9',1,'operations_research::TypeRegulationsChecker::TypePolicyOccurrence']]],
  ['post_5ftravels_5385',['post_travels',['../structoperations__research_1_1_travel_bounds.html#a55ce83aba1e381a608a0b9bdf8dda426',1,'operations_research::TravelBounds']]],
  ['pre_5ftravels_5386',['pre_travels',['../structoperations__research_1_1_travel_bounds.html#abca7c77375a78b314c7a1c59cf82d3c8',1,'operations_research::TravelBounds']]],
  ['prev_5fvalues_5f_5387',['prev_values_',['../classoperations__research_1_1_var_local_search_operator.html#a68dd19d6f0517e2bfb128f87fbad4fea',1,'operations_research::VarLocalSearchOperator']]],
  ['prototype_5f_5388',['prototype_',['../classoperations__research_1_1_solution_collector.html#ad6447dcc60c8d0bb89d7c72530afb842',1,'operations_research::SolutionCollector']]]
];
